--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -328,7 +328,7 @@ body {
   border-radius: 9999px;
   background-color: rgb(31, 72, 153);
   color: white;
-  box-shadow: 0 10px 15px -3px rgb(0, 0, 0), 0 4px 6px -2px rgb(0, 0, 0);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   z-index: 50;
   transition: all 0.07s ease;
 }
