--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -485,7 +485,7 @@ body {
 
 <div id="app" class="container mx-auto px-4 py-4 sm:py-6">
 <header class="text-center mb-3 sm:mb-3">
-  <h1 class="text-3xl sm:text-4xl font-bold mb-1 sm:mb-2 title-effect">💙</h1>
+  <h1 class="text-3xl sm:text-4xl font-bold mb-1 sm:mb-2 title-effect">🌸</h1>
   <p class="text-grey-600 text-base sm:text-lg subtitle">。。。</p>
 </header>
 
